Rename jerry_port_print_char to jerry_port_string_print for printing UTF8 directly
Use name jerry_port_string_print to consistence with jerry_string_print.
Add API jerry_string_iterate_code_point and jerry_code_point_print to be called by jerry_port_string_print

JerryScript-DCO-1.0-Signed-off-by: Yonggang Luo luoyonggang@gmail.com

--- a/docs/05.PORT-API.md
+++ b/docs/05.PORT-API.md
@@ -72,15 +72,18 @@ typedef enum
 void jerry_port_log (jerry_log_level_t level, const char *fmt, ...);
 ```
 
-The `jerry_port_print_char` is currently not used by the jerry-core directly.
+The `jerry_port_string_print` is currently not used by the jerry-core directly.
 However, it provides a port specific way for `jerry-ext` components to print
 information.
 
 ```c
 /**
- * Print a character to stdout.
+ * Print a zero-terminated UTF-8 string with length to standard output.
+ *
+ * @param s The zero-terminated UTF-8 string to print
+ * @param len The length of the UTF-8 string.
  */
-void jerry_port_print_char (char c);
+void jerry_port_string_print (const char *s, size_t len);
 ```
 
 ### Jerry Module system
@@ -278,13 +281,18 @@ jerry_port_log (jerry_log_level_t level, /**< log level */
 
 ```c
 /**
- * Print a character to stdout with putchar.
+ * Provide implementation of jerry_port_string_print.
+ * Uses 'printf' to print a zero-terminated UTF-8 string to standard output.
+ *
+ * @param s The zero-terminated UTF-8 string to print
+ * @param len The length of the UTF-8 string.
  */
 void
-jerry_port_print_char (char c)
+jerry_port_string_print (const char *s, size_t len)
 {
-  putchar (c);
-} /* jerry_port_print_char */
+  (void) len;
+  printf ("%s", s);
+} /* jerry_port_string_print */
 ```
 
 ## Date
