--- a/docs/10.EXT-REFERENCE-HANDLER.md
+++ b/docs/10.EXT-REFERENCE-HANDLER.md
@@ -513,14 +513,14 @@ jerryx_handler_gc (const jerry_value_t func_obj_val, const jerry_value_t this_p,
 
 Provide a `print` implementation for scripts. The routine converts all of its
 arguments to strings and outputs them char-by-char using
-`jerry_port_print_char`. The NULL character is output as "\u0000",
+`jerry_port_string_print`. The NULL character is output as "\u0000",
 other characters are output bytewise.
 
 *Note*: This implementation does not use standard C `printf` to print its
 output. This allows more flexibility but also extends the core JerryScript
 engine port API. Applications that want to use `jerryx_handler_print` must
 ensure that their port implementation also provides
-`jerry_port_print_char`.
+`jerry_port_string_print`.
 
 **Prototype**
 
@@ -540,7 +540,7 @@ jerryx_handler_print (const jerry_value_t func_obj_val, const jerry_value_t this
 **See also**
 
 - [jerryx_handler_register_global](#jerryx_handler_register_global)
-- [jerry_port_print_char](05.PORT-API.md#jerry_port_print_char)
+- [jerry_port_string_print](05.PORT-API.md#jerry_port_string_print)
 
 
 # Handler registration helper
