--- a/docs/16.MIGRATION-GUIDE.md
+++ b/docs/16.MIGRATION-GUIDE.md
@@ -766,7 +766,7 @@ In this section the new API functions are listed.
 - [`jerry_port_normalize_path`](05.PORT-API.md#jerry_port_normalize_path)
 - [`jerry_port_read_source`](05.PORT-API.md#jerry_port_read_source)
 - [`jerry_port_release_source`](05.PORT-API.md#jerry_port_release_source)
-- [`jerry_port_print_char`](05.PORT-API.md#jerry_port_print_char)
+- [`jerry_port_string_print`](05.PORT-API.md#jerry_port_string_print)
 - [`jerry_port_get_current_context`](05.PORT-API.md#jerry_port_get_current_context)
 - [`jerry_port_fatal`](05.PORT-API.md#jerry_port_fatal)
 - [`jerry_port_sleep`](05.PORT-API.md#jerry_port_sleep)
