Rework external arraybuffer and shared arraybuffer free operation
JerryScript-DCO-1.0-Signed-off-by: Gergo Csizi csgergo92@gmail.com

--- a/docs/02.API-REFERENCE.md
+++ b/docs/02.API-REFERENCE.md
@@ -809,6 +809,34 @@ typedef void (*jerry_external_string_free_callback_t) (jerry_char_t *string_p,
 - [jerry_create_external_string](#jerry_create_external_string)
 - [jerry_create_external_string_sz](#jerry_create_external_string_sz)
 
+## jerry_external_arraybuffer_free_callback_t
+
+**Summary**
+
+Free callback for external arraybuffers. See
+[jerry_arraybuffer_set_external_free_callback](#jerry_arraybuffer_set_external_free_callback)
+for more information.
+
+**Prototype**
+
+```c
+typedef void (*jerry_external_arraybuffer_free_callback_t) (uint32_t length,
+                                                            void *buffer_p,
+                                                            void *user_p);
+```
+
+- `length` - external buffer length **in bytes**
+- `buffer_p` - external buffer pointer
+- `user_p` - pointer passed when the external arraybuffer is created
+
+*New in version [[NEXT_RELEASE]]*.
+
+**See also**
+
+- [jerry_arraybuffer_set_external_free_callback](#jerry_arraybuffer_set_external_free_callback)
+- [jerry_create_arraybuffer_external](#jerry_create_arraybuffer_external)
+- [jerry_create_shared_arraybuffer_external](#jerry_create_shared_arraybuffer_external)
+
 ## jerry_error_object_created_callback_t
 
 **Summary**
@@ -6558,6 +6586,71 @@ jerry_create_arraybuffer (jerry_length_t size);
 - [jerry_value_is_arraybuffer](#jerry_value_is_arraybuffer)
 - [jerry_release_value](#jerry_release_value)
 
+# jerry_arraybuffer_set_external_free_callback
+
+**Summary**
+
+Sets the global callback which is called when an external arraybuffer is released.
+It is recommended to set this function before the first external arraybuffer is created.
+
+*Additional info*:
+- When the callback is NULL, no function is called when an external arraybuffer is freed.
+
+**Prototype**
+
+```c
+void jerry_arraybuffer_set_external_free_callback (jerry_external_arraybuffer_free_callback_t callback_p);
+```
+
+- `callback_p` - callback which is called when an external arraybuffer is freed.
+
+*New in version [[NEXT_RELEASE]]*.
+
+**Example**
+
+[doctest]: # ()
+
+```c
+#include "jerryscript.h"
+#include <stdio.h>
+#include <stdlib.h>
+#include <string.h>
+
+static void
+external_arraybuffer_free_callback (uint32_t length, /**< length of buffer */
+                                    void *buffer, /**< buffer to free (if needed) */
+                                    void *user_p) /**< user pointer */
+{
+  free (buffer);
+  printf ("External arraybuffer is freed!\n");
+}
+
+int
+main (void)
+{
+  jerry_init (JERRY_INIT_EMPTY);
+  
+  jerry_arraybuffer_set_external_free_callback (external_arraybuffer_free_callback);
+  
+  const uint32_t buffer_size = 15;
+
+  uint8_t *buffer_p = (uint8_t *) malloc (sizeof (uint8_t) * buffer_size);
+  memset (buffer_p, 51 /* default value */, buffer_size);
+  
+  jerry_value_t external_arraybuffer = jerry_create_arraybuffer_external (buffer_size, buffer_p, NULL);
+  
+  /* The external_arraybuffer_free_callback is called eventually by the garbage collector. */
+  jerry_release_value (external_arraybuffer);
+  jerry_cleanup ();
+  return 0;
+}
+```
+
+**See also**
+
+- [jerry_external_arraybuffer_free_callback_t](#jerry_external_arraybuffer_free_callback_t)
+- [jerry_create_arraybuffer_external](#jerry_create_arraybuffer_external)
+- [jerry_create_shared_arraybuffer_external](#jerry_create_shared_arraybuffer_external)
 
 ## jerry_create_arraybuffer_external
 
@@ -6567,7 +6660,8 @@ Creates a jerry_value_t representing an ArrayBuffer object with
 user specified back-buffer.
 
 User must pass a buffer pointer which is at least `size` big.
-After the object is not needed the GC will call the `free_cb`
+After the object is not needed the garbage collector will call the callback which can be set by
+[jerry_arraybuffer_set_external_free_callback](#jerry_arraybuffer_set_external_free_callback)
 so the user can release the buffer which was provided.
 
 *Note*:
@@ -6579,21 +6673,21 @@ so the user can release the buffer which was provided.
 
 ```c
 jerry_value_t
-jerry_create_arraybuffer_external (const jerry_length_t size
+jerry_create_arraybuffer_external (const jerry_length_t size,
                                    uint8_t *buffer_p,
-                                   jerry_value_free_callback_t free_cb);
+                                   void *user_p);
 ```
 
 - `size` - size of the buffer to use **in bytes** (should not be 0)
 - `buffer_p` - the buffer used for the Array Buffer object (should not be a null pointer)
-- `free_cb` - the callback function called when the object is released
+- `user_p` - user pointer passed to the callback when the arraybuffer is freed
 - return value
   - the new ArrayBuffer as a `jerry_value_t`
   - if the `size` is zero or `buffer_p` is a null pointer this will return an empty ArrayBuffer.
 
 *New in version 2.0*.
 
-*Changed in version [[NEXT_RELEASE]]*: type of `free_cb` has been changed.
+*Changed in version [[NEXT_RELEASE]]*: `free_cb` is replaced by `user_p`.
 
 **Example**
 
@@ -6669,7 +6763,8 @@ Creates a jerry_value_t representing an SharedArrayBuffer object with
 user specified back-buffer.
 
 User must pass a buffer pointer which is at least `size` big.
-After the object is not needed the GC will call the `free_cb`
+After the object is not needed the garbage collector will call the callback which can be set with
+[jerry_arraybuffer_set_external_free_callback](#jerry_arraybuffer_set_external_free_callback)
 so the user can release the buffer which was provided.
 
 *Note*:
@@ -6681,14 +6776,14 @@ so the user can release the buffer which was provided.
 
 ```c
 jerry_value_t
-jerry_create_shared_arraybuffer_external (const jerry_length_t size
+jerry_create_shared_arraybuffer_external (const jerry_length_t size,
                                           uint8_t *buffer_p,
-                                          jerry_value_free_callback_t free_cb);
+                                          void *user_p)
 ```
 
 - `size` - size of the buffer to use **in bytes** (should not be 0)
 - `buffer_p` - the buffer used for the Shared Array Buffer object (should not be a null pointer)
-- `free_cb` - the callback function called when the object is released
+- `user_p` - user pointer passed to the callback when the arraybuffer is freed
 - return value
     - the new SharedArrayBuffer as a `jerry_value_t`
     - if the `size` is zero or `buffer_p` is a null pointer this will return an empty SharedArrayBuffer.
