Implement function.toString operation
May increase the memory consumtpion heavily.

JerryScript-DCO-1.0-Signed-off-by: Zoltan Herczeg zherczeg.u-szeged@partner.samsung.com

--- a/docs/02.API-REFERENCE.md
+++ b/docs/02.API-REFERENCE.md
@@ -175,6 +175,8 @@ Possible compile time enabled feature types:
  - JERRY_FEATURE_GLOBAL_THIS - GlobalThisValue support
  - JERRY_FEATURE_PROMISE_CALLBACK - Promise callback support
  - JERRY_FEATURE_MODULE - Module support
+ - JERRY_FEATURE_WEAKREF - WeakRef support
+ - JERRY_FEATURE_FUNCTION_TO_STRING - function toString support
 
 *New in version 2.0*.
 
@@ -183,7 +185,8 @@ Possible compile time enabled feature types:
 *Changed in version 2.4*: Added `JERRY_FEATURE_BIGINT`, `JERRY_FEATURE_REALM` values.
 
 *Changed in version [[NEXT_RELEASE]]*: Added `JERRY_FEATURE_VM_THROW`, `JERRY_FEATURE_GLOBAL_THIS`,
-                                       `JERRY_FEATURE_PROMISE_CALLBACK`, and `JERRY_FEATURE_MODULE` values.
+                                       `JERRY_FEATURE_PROMISE_CALLBACK`, and `JERRY_FEATURE_MODULE`,
+                                       `JERRY_FEATURE_WEAKREF`, and `JERRY_FEATURE_FUNCTION_TO_STRING` values.
 
 ## jerry_container_type_t
 
