Implement source code start position for source code retrieval
JerryScript-DCO-1.0-Signed-off-by: Zoltan Herczeg zherczeg.u-szeged@partner.samsung.com

--- a/docs/02.API-REFERENCE.md
+++ b/docs/02.API-REFERENCE.md
@@ -1421,6 +1421,7 @@ Possible values:
  - JERRY_SOURCE_INFO_HAS_SOURCE_CODE - source_code field is valid
  - JERRY_SOURCE_INFO_HAS_FUNCTION_ARGUMENTS - function_arguments field is valid
  - JERRY_SOURCE_INFO_HAS_SOURCE_RANGE - both source_range_start and source_range_length fields are valid
+ - JERRY_SOURCE_INFO_HAS_SOURCE_START - both line_start and column_start fields are valid
 
 *New in version [[NEXT_RELEASE]]*.
 
@@ -1445,6 +1446,8 @@ typedef struct
   jerry_value_t function_arguments; /**< function arguments */
   uint32_t source_range_start; /**< start position of the function in the source code */
   uint32_t source_range_length; /**< source length of the function in the source code */
+  uint32_t line_start; /**< source code start line */
+  uint32_t column_start; /**< source code start column */
 } jerry_source_info_t;
 ```
 
