Add notes to jerry_create_undefined, jerry_create_null and jerry_create_boolean
JerryScript-DCO-1.0-Signed-off-by: Mate Dabis mdabis@inf.u-szeged.hu

--- a/docs/02.API-REFERENCE.md
+++ b/docs/02.API-REFERENCE.md
@@ -6870,6 +6870,10 @@ jerry_create_shared_arraybuffer_external (const jerry_length_t size
 
 Create a jerry_value_t representing a boolean value from the given boolean parameter.
 
+*Notes*:
+- The boolean values (true/false) are fixed constants. Their values can be copied any number of times without calling
+ [jerry_acquire_value](#jerry_acquire_value), and freeing it with [jerry_release_value](#jerry_release_value) is optional.
+
 **Prototype**
 
 ```c
@@ -7237,6 +7241,10 @@ jerry_create_number_nan (void);
 **Summary**
 
 Creates and returns a `jerry_value_t` with type null object.
+
+*Notes*:
+- The null value is a fixed constant. Its value can be copied any number of times without calling
+ [jerry_acquire_value](#jerry_acquire_value), and freeing it with [jerry_release_value](#jerry_release_value) is optional.
 
 **Prototype**
 
@@ -8175,6 +8183,10 @@ main (void)
 **Summary**
 
 Creates a `jerry_value_t` representing an undefined value.
+
+*Notes*:
+- The undefined value is a fixed constant. Its value can be copied any number of times without calling [jerry_acquire_value](#jerry_acquire_value), and freeing it with [jerry_release_value](#jerry_release_value) is optional.
+
 
 **Prototype**
 
